fix: remove unnecessary visibility properties in CSS and update animation visibility handling

--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -24,14 +24,12 @@
 .content_text span {
   font-size: 18px;
   font-weight: 300;
-  visibility: hidden;
 }
 
 .content_text .content_title {
   display: flex;
   flex-direction: column;
   align-items: center;
-  visibility: hidden;
 }
 
 .content_text .content_title h1,
@@ -68,7 +66,6 @@
   font-weight: 300;
   line-height: 30px;
   text-wrap: balance;
-  visibility: hidden;
 }
 
 @media (max-width: 1300px) {
